* Add --help and --version command line flags (Justin Jacobs)

* Add developer console and HUD (Justin Jacobs)
* Add book GUI (Igor Paliychuk)
* Add GUI for selecting quantity when shift-clicking on items (Justin Jacobs)
* Refactor configuration menu code to support alternative platforms (Justin Jacobs)
* Improved pause menu with volume sliders. (Justin Jacobs)

* Don't autopickup items dropped by the player (Justin Jacobs)
* Allow multiple items to drop at the same time (Justin Jacobs)
* Missing items due to mod configuration are now marked as "Unknown Item" (Justin Jacobs)
* Smoother movement around 1x1 tile objects (Justin Jacobs)
* Map rendering performance improvements (Stefan Beller)
* Enemies can wander randomly when not in combat (Justin Jacobs)
* Better support for using targeted powers when right-clicking on action bar icons (Justin Jacobs)
* Implement action queue, allowing potions to be used while attacking (Justin Jacobs)
* Added configuration option to always show HP/MP/XP bar text. (Justin Jacobs)
* Add option to hide loot labels; show them by pressing ALT (Justin Jacobs)
* Prevent loot labels from overlapping eachother. (Justin Jacobs)
* Refactor AI power system to support unlimited powers instead of just four (Justin Jacobs)
* Display bonuses in power tooltips (Justin Jacobs)
* Allow more than 4 save slots (Justin Jacobs)
* Enemy minions can now receive party buffs. (Justin Jacobs)
* Add option to automatically equip items (Justin Jacobs)
* The last HUD log message is now displayed on top of open menus that might have previously obsurced them. (Justin Jacobs)
* "Repeater" powers no longer hit the same target multiple times. (Justin Jacobs)
* Status effect icons now have tooltips to show effect name and duration. (Justin Jacobs)
* More varied enemy movement patterns with the addition of random fleeing (Justin Jacobs)
* Add subtitle support. (Justin Jacobs)
* Usuability improvments to WidgetInput. (Justin Jacobs)