@@ -999,6 +999,8 @@ body {
 
 <p><strong>text_pos</strong> | <code>label</code> | Position of the text label with the map name.</p>
 
+<p><strong>background</strong> | <code>filename</code> | Optional background image.</p>
+
 <hr />
 
 <h4>MenuNPCActions</h4>
